@@ -23,6 +23,8 @@
 	- add brp-strip-shared script <rodrigob@conectiva.com.br>.
 	- better item/task progress bars <rodrigob@conectiva.com.br>.
 	- add support for SHA1 as well as MD5 message digests.
+	- add rpmGetRpmlibProvides() to retrieve rpmlib(...) provides
+		"Pawel A. Gajda" <mis@k2.net.pl>.
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
